Update documentation to reflect Java 24, new pricing, and application plugin
README.md updates:
- Update Java version badge to 24+
- Update Spring Boot badge to 3.5+
- Update cost information to $3.20 with fast preview model
- Add multiple run options (bootRun, run, IDE)
- Add veo.api.model configuration property
- Document Java 24 modern features showcase

CLAUDE.md updates:
- Add application plugin build configuration
- Document both bootRun and run tasks
- Update cost information for fast preview model
- Add comprehensive Java 24 build configuration section
- Expand modern Java features documentation
- Document toolchain and preview features setup

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>